--- a/python/0. Book-URL-Git.md
+++ b/python/0. Book-URL-Git.md
@@ -1,3 +1,4 @@
+## ML/DL
 ### git/book
 * kaggle titanic solution
 https://github.com/minsuk-heo/kaggle-titanic
@@ -13,3 +14,9 @@ https://github.com/golbin/TensorFlow-Tutorials
 
 ### python 관련
 * https://python-graph-gallery.com/
+
+
+### blog
+## 논문 분석
+* Attention
+http://docs.likejazz.com/attention/
