--- a/python/0. Book-URL-Git.md
+++ b/python/0. Book-URL-Git.md
@@ -4,11 +4,13 @@
 https://github.com/minsuk-heo/kaggle-titanic
 * 파이썬 머신러닝 완벽가이드  
 * [개정판] 파이썬 라이브러리를 활용한 머신 러닝  
-https://github.com/rickiepark/introduction_to_ml_with_python
-* http://fliphtml5.com/hkuy/bdgq
+git : https://github.com/rickiepark/introduction_to_ml_with_python
+book : http://fliphtml5.com/hkuy/bdgq
 
 * 핸즈온 머신러닝  
-https://github.com/rickiepark/handson-ml
+git : https://github.com/rickiepark/handson-ml
+book : http://fliphtml5.com/hkuy/lccw/basic/51-100
+
 * 골빈해커의 3분 딥러닝  
 https://github.com/golbin/TensorFlow-Tutorials
 
