--- a/django/8.3-Django-Project---Template.md
+++ b/django/8.3-Django-Project---Template.md
@@ -1,6 +1,6 @@
 ## book\templates\book\book_list.html  리스트
 ### 리스트 
-```
+```{python}
 <table border="1">
 <tr>
  <td>ID</t><td>제목</td><td>작가</td><td>출판사</td><td>IP</td><td></td><td></td>
